--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -1,9 +1,9 @@
 if (MPI)
+    file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)
+    foreach (fil empty_file inner_group_dataset.hdf5 single_dataset.hdf5)
+        configure_file("data/${fil}" "${CMAKE_CURRENT_BINARY_DIR}/data/${file}" COPYONLY)
+    endforeach ()
     if (LINEARALGEBRA_ARRAY_HDF5)
-        file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)
-        foreach (fil empty_file inner_group_dataset.hdf5 single_dataset.hdf5)
-            configure_file("data/${fil}" "${CMAKE_CURRENT_BINARY_DIR}/data/${file}" COPYONLY)
-        endforeach ()
         add_executable(test-${PROJECT_NAME}-HDF5Handle.exe testHDF5Handle.cpp)
         target_link_libraries(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
         target_compile_definitions(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
@@ -19,6 +19,10 @@ if (MPI)
     endif ()
     if (LINEARALGEBRA_ARRAY_GA)
         target_sources(test-${PROJECT_NAME}-parallel PRIVATE testDistrArrayGA.cpp)
+    endif ()
+    if (LINEARALGEBRA_ARRAY_HDF5)
+        target_sources(test-${PROJECT_NAME}-parallel PRIVATE testPHDF5Handle.cpp)
+        target_compile_definitions(test-${PROJECT_NAME}-parallel PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
     endif ()
     target_link_libraries(test-${PROJECT_NAME}-parallel PUBLIC molpro::${PROJECT_NAME} gmock_main)
     gtest_discover_tests(test-${PROJECT_NAME}-parallel)
