--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -1,14 +1,13 @@
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)
+foreach (fil empty_file inner_group_dataset.hdf5 single_dataset.hdf5)
+    configure_file("data/${fil}" "${CMAKE_CURRENT_BINARY_DIR}/data/${file}" COPYONLY)
+endforeach ()
+add_executable(test-${PROJECT_NAME}-HDF5Handle.exe testHDF5Handle.cpp)
+target_link_libraries(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
+target_compile_definitions(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
+gtest_discover_tests(test-${PROJECT_NAME}-HDF5Handle.exe)
+
 if (MPI)
-    file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)
-    foreach (fil empty_file inner_group_dataset.hdf5 single_dataset.hdf5)
-        configure_file("data/${fil}" "${CMAKE_CURRENT_BINARY_DIR}/data/${file}" COPYONLY)
-    endforeach ()
-    if (LINEARALGEBRA_ARRAY_HDF5)
-        add_executable(test-${PROJECT_NAME}-HDF5Handle.exe testHDF5Handle.cpp)
-        target_link_libraries(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
-        target_compile_definitions(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
-        gtest_discover_tests(test-${PROJECT_NAME}-HDF5Handle.exe)
-    endif ()
     add_executable(test-${PROJECT_NAME}-parallel
             main.cpp
             testutil.cpp
@@ -19,6 +18,7 @@ if (MPI)
     endif ()
     if (LINEARALGEBRA_ARRAY_GA)
         target_sources(test-${PROJECT_NAME}-parallel PRIVATE testDistrArrayGA.cpp)
+        target_compile_definitions(test-${PROJECT_NAME}-parallel PRIVATE TEST_WITH_GA)
     endif ()
     if (LINEARALGEBRA_ARRAY_HDF5)
         target_sources(test-${PROJECT_NAME}-parallel PRIVATE testPHDF5Handle.cpp)
