--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,9 @@ foreach (t IterativeSolver-test IterativeSolver-OOCA-test TestIterativeSolver Pa
     target_link_libraries(${t}.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)# ${MPI_CXX_LIBRARIES})
     gtest_discover_tests(${t}.exe)
     if (MPI_FOUND)
+        include(LibraryManagerUtils)
+        print_value(MPIEXEC)
+        print_value(MPIOPTIONS)
         add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${t}.exe)
     else (MPI_FOUND)
         add_test(${t} ${t}.exe)
