--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,10 +12,11 @@ foreach (t IterativeSolver-test IterativeSolver-OOCA-test TestIterativeSolver Pa
     add_executable(${t}.exe ${t}.cpp test.h)
     target_link_libraries(${t}.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)# ${MPI_CXX_LIBRARIES})
     gtest_discover_tests(${t}.exe)
+    message(STATUS "configuring test ${t}")
+    include(LibraryManagerUtils)
+    print_variable(MPIEXEC)
+    print_variable(MPIOPTIONS)
     if (MPI_FOUND)
-        include(LibraryManagerUtils)
-        print_value(MPIEXEC)
-        print_value(MPIOPTIONS)
         add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${t}.exe)
     else (MPI_FOUND)
         add_test(${t} ${t}.exe)
