build ArrayHandlerFactory when required components are built as well

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -10,6 +10,11 @@ LibraryManager_Append(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} PUBLIC ${HDF5_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${HDF5_INCLUDE_DIRS})
 target_compile_definitions(${PROJECT_NAME} PUBLIC ${HDF5_DEFINITIONS})
+if (MPI AND LINEARALGEBRA_ARRAY_HDF5)
+    LibraryManager_Append(${PROJECT_NAME}
+            PUBLIC_HEADER ArrayHandlerFactory.h
+            )
+endif ()
 
 if (MPI)
     LibraryManager_Append(${PROJECT_NAME}
