--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,10 +14,13 @@ foreach (t IterativeSolver-test IterativeSolver-OOCA-test TestIterativeSolver Pa
     gtest_discover_tests(${t}.exe)
     message(STATUS "configuring test ${t}")
     include(LibraryManagerUtils)
-    print_variable(MPIEXEC)
-    print_variable(MPIOPTIONS)
+    print_variable(MPIEXEC_EXECUTABLE)
+    print_variable(MPIPROCS)
     if (MPI_FOUND)
-        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${t}.exe)
+        if (NOT MPIPROCS)
+            set(MPIPROCS 1)
+        endif ()
+        add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIPROCS} ${MPIEXEC_PREFLAGS} ${t}.exe ${MPIEXEC_POSTFLAGS})
     else (MPI_FOUND)
         add_test(${t} ${t}.exe)
     endif (MPI_FOUND)
