--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,15 +12,12 @@ foreach (t IterativeSolver-test IterativeSolver-OOCA-test TestIterativeSolver Pa
     add_executable(${t}.exe ${t}.cpp test.h)
     target_link_libraries(${t}.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)# ${MPI_CXX_LIBRARIES})
     gtest_discover_tests(${t}.exe)
-    message(STATUS "configuring test ${t}")
     include(LibraryManagerUtils)
-    print_variable(MPIEXEC_EXECUTABLE)
-    print_variable(MPIPROCS)
     if (MPI_FOUND)
-        if (NOT MPIPROCS)
-            set(MPIPROCS 1)
+        if (NOT DEFINED ENV{MPIPROCS})
+            set(ENV{MPIPROCS} 1)
         endif ()
-        add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIPROCS} ${MPIEXEC_PREFLAGS} ${t}.exe ${MPIEXEC_POSTFLAGS})
+        add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} ${t}.exe ${MPIEXEC_POSTFLAGS})
     else (MPI_FOUND)
         add_test(${t} ${t}.exe)
     endif (MPI_FOUND)
