--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,14 +13,17 @@ foreach (t IterativeSolver-test IterativeSolver-OOCA-test TestIterativeSolver Pa
     target_link_libraries(${t}.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)# ${MPI_CXX_LIBRARIES})
     gtest_discover_tests(${t}.exe)
     include(LibraryManagerUtils)
-    if (MPI_FOUND)
+    if (MPI)
+        # in principle this should be done at runtime but it seems cmake/ctest support is not yet there to do it simply
         if (NOT DEFINED ENV{MPIPROCS})
             set(ENV{MPIPROCS} 1)
         endif ()
+        message(STATUS "MPIPROCS: $ENV{MPIPROCS}")
+        message(STATUS "add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} ${t}.exe ${MPIEXEC_POSTFLAGS})")
         add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} ${t}.exe ${MPIEXEC_POSTFLAGS})
-    else (MPI_FOUND)
+    else ()
         add_test(${t} ${t}.exe)
-    endif (MPI_FOUND)
+    endif ()
 endforeach ()
 
 add_subdirectory(array)
