--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,14 +12,12 @@ foreach (t IterativeSolver-test IterativeSolver-OOCA-test TestIterativeSolver Pa
     add_executable(${t}.exe ${t}.cpp test.h)
     target_link_libraries(${t}.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)# ${MPI_CXX_LIBRARIES})
     gtest_discover_tests(${t}.exe)
-    include(LibraryManagerUtils)
     if (MPI)
         # in principle this should be configured at runtime but it seems cmake/ctest support is not yet there to do it simply
         if (NOT DEFINED ENV{MPIPROCS})
             set(ENV{MPIPROCS} 1)
         endif ()
-#        message(STATUS "MPIPROCS: $ENV{MPIPROCS}")
-#        message(STATUS "add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} "${CMAKE_CURRENT_BINARY_DIR}/${t}.exe" ${MPIEXEC_POSTFLAGS})")
+        message(STATUS "add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} "${CMAKE_CURRENT_BINARY_DIR}/${t}.exe" ${MPIEXEC_POSTFLAGS})")
         add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} "${CMAKE_CURRENT_BINARY_DIR}/${t}.exe" ${MPIEXEC_POSTFLAGS})
     else ()
         add_test(${t} ${t}.exe)
