--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,9 +1,14 @@
 foreach (t PagedVector-benchmark)
     add_executable(${t}.exe ${t}.cpp)
     target_link_libraries(${t}.exe PUBLIC ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
-    if (MPI_FOUND)
-        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${t}.exe)
-    else (MPI_FOUND)
+    if (MPI)
+        # in principle this should be configured at runtime but it seems cmake/ctest support is not yet there to do it simply
+        if (NOT DEFINED ENV{MPIPROCS})
+            set(ENV{MPIPROCS} 1)
+        endif ()
+        message(DEBUG "add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} ${CMAKE_CURRENT_BINARY_DIR}/${t}.exe ${MPIEXEC_POSTFLAGS})")
+        add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} "${CMAKE_CURRENT_BINARY_DIR}/${t}.exe" ${MPIEXEC_POSTFLAGS})
+    else ()
         add_test(${t} ${t}.exe)
-    endif (MPI_FOUND)
+    endif ()
 endforeach ()
