--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,38 +1,56 @@
+image: ${CI_REGISTRY}/molpro/${CI_PROJECT_NAME}
 cache:
   key: ${CI_PROJECT_NAME}
   paths:
     - public
-    - build
-build:
-  image: ${CI_REGISTRY}/molpro/${CI_PROJECT_NAME}
-  #  only:
-  #    - merge_requests
+build100:
+  only:
+    - merge_requests
+  timeout: 15m
   script:
-    - TOP=$PWD
-    - PROJECT_NAME=LinearAlgebra
-    - git checkout $CI_COMMIT_SHA # because of cache
-    - git fetch --tags
-    - git reset --hard
-    - git clean -f src examples docs test
-    - procs=$(lscpu -p | egrep -v '^#' | wc -l ) || procs=$(sysctl -n hw.physicalcpu) || procs=1; echo $procs processors available
+    - BUILD=build/FORTRAN=1/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=1 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j  && time ctest || ctest -V
+build110:
+#  only:
+#    - merge_requests
+  timeout: 15m
+  script:
     - export MPIPROCS=2
-    - cd $TOP; BUILD=build/FORTRAN=1/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && cmake -DFORTRAN=1 -DMPI=0 -DPPIDD=0 $TOP && cmake --build . -- -j ${procs} && ctest || ctest -V
-    - cd $TOP; BUILD=build/FORTRAN=1/MPI=1/PPIDD=1 ; mkdir -p $BUILD && cd $BUILD && pwd && cmake -DFORTRAN=1 -DMPI=1 -DPPIDD=1 $TOP && cmake --build . -- -j ${procs} && ctest || ctest -V
-    - cd $TOP; BUILD=build/FORTRAN=0/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && cmake -DFORTRAN=0 -DMPI=0 -DPPIDD=0 $TOP && cmake --build . -- -j ${procs} && ctest || ctest -V
-    - cd $TOP; BUILD=build/FORTRAN=0/MPI=1/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && cmake -DFORTRAN=0 -DMPI=1 -DPPIDD=0 $TOP && cmake --build . -- -j ${procs} && ctest || ctest -V
-    - cd $TOP; BUILD=build/FORTRAN=0/MPI=1/PPIDD=1 ; mkdir -p $BUILD && cd $BUILD && pwd && cmake -DFORTRAN=0 -DMPI=1 -DPPIDD=1 $TOP && cmake --build . -- -j ${procs} && ctest || ctest -V
-    - mkdir -p $TOP/public
-    - mkdir -p $TOP/$BUILD/docs/$PROJECT_NAME/html/DoxygenTagFiles && cp $TOP/$BUILD/docs/$PROJECT_NAME/$PROJECT_NAME.tag $TOP/$BUILD/docs/$PROJECT_NAME/html/DoxygenTagFiles
-    - . $TOP/$BUILD/project_version.sh ; rsync -a --delete $TOP/$BUILD/docs/*/html/ $TOP/public/${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    - rm -f  $TOP/public/${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}/${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    - if [ $(git describe --tags --abbrev=0 --always HEAD) = $(git describe --tags --abbrev=0 --always origin/master) ]; then cd $TOP/public; rm -f latest; ln -s ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR} latest ; rm -f ./index.html; fi
-    - echo '<head><meta http-equiv="refresh" content="0; URL=latest"></head>' > $TOP/public/index.html
+    - BUILD=build/FORTRAN=1/MPI=1/PPIDD=1 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=1 -DMPI=1 -DPPIDD=1 $OLDPWD && time cmake --build . -- -j && time ctest || ctest -V
+build000:
+#  only:
+#    - merge_requests
+  timeout: 15m
+  script:
+    - BUILD=build/FORTRAN=0/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=0 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j && time ctest || ctest -V
+build010:
+  only:
+    - merge_requests
+  timeout: 15m
+  script:
+    - export MPIPROCS=2
+    - BUILD=build/FORTRAN=0/MPI=1/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=0 -DMPI=1 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j && time ctest || ctest -V
+build011:
+  only:
+    - merge_requests
+  timeout: 15m
+  script:
+    - export MPIPROCS=2
+    - BUILD=build/FORTRAN=1/MPI=1/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=0 -DMPI=1 -DPPIDD=1 $OLDPWD && time cmake --build . -j && time ctest || ctest -V
 pages:
   stage: deploy
   only:
     - tags
   script:
-    - echo nothing
+    - PUBLIC=$PWD/public
+    - mkdir -p $PUBLIC
+    - BUILD=$PWD/cmake-build
+    - PROJECT_NAME=LinearAlgebra
+    - mkdir -p $BUILD && cd $BUILD && time cmake -DFORTRAN=1 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . --target ${PROJECT_NAME}-doc -j
+    - mkdir -p $BUILD/docs/$PROJECT_NAME/html/DoxygenTagFiles && cp $BUILD/docs/$PROJECT_NAME/$PROJECT_NAME.tag $BUILD/docs/$PROJECT_NAME/html/DoxygenTagFiles
+    - . $BUILD/project_version.sh ; rsync -a --delete $BUILD/docs/*/html/ $PUBLIC/${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    - rm -f  $PUBLIC/${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}/${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    - if [ $(git describe --tags --abbrev=0 --always HEAD) = $(git describe --tags --abbrev=0 --always origin/master) ]; then cd $PUBLIC; rm -f latest; ln -s ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR} latest ; rm -f ./index.html; cd ..; fi
+    - echo '<head><meta http-equiv="refresh" content="0; URL=latest"></head>' > $PUBLIC/index.html
   artifacts:
     paths:
       - public
