--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -29,7 +29,18 @@ foreach (fil ${EXAMPLES})
     if (FORTRAN AND CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
         target_link_libraries(${test_name} PUBLIC ifcore)
     endif ()
-    add_test(${nam} ${PROJECT_BINARY_DIR}/${test_name})
+
+
+    if (MPI)
+        # in principle this should be configured at runtime but it seems cmake/ctest support is not yet there to do it simply
+        if (NOT DEFINED ENV{MPIPROCS})
+            set(ENV{MPIPROCS} 1)
+        endif ()
+        message(DEBUG "add_test(${nam} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} ${PROJECT_BINARY_DIR}/${test_name} ${MPIEXEC_POSTFLAGS})")
+        add_test(${nam} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} ${PROJECT_BINARY_DIR}/${test_name} ${MPIEXEC_POSTFLAGS})
+    else ()
+        add_test(${nam} ${PROJECT_BINARY_DIR}/${test_name})
+    endif ()
 endforeach ()
 
 if (BENCHMARK AND FORTRAN)
