--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -11,7 +11,10 @@ add_executable(test-${PROJECT_NAME}-Span.exe testSpan.cpp)
 target_link_libraries(test-${PROJECT_NAME}-Span.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
 gtest_discover_tests(test-${PROJECT_NAME}-Span.exe)
 
-add_executable(test-${PROJECT_NAME}-ArrayHandler.exe testArrayHandler.cpp testArrayHandlerIterable.cpp testArrayHandlerSparse.cpp)
+add_executable(test-${PROJECT_NAME}-ArrayHandler.exe testArrayHandler.cpp testArrayHandlerIterable.cpp
+        testArrayHandlerSparse.cpp
+        testArrayHandlerIterableSparse.cpp
+        )
 if (MPI AND LINEARALGEBRA_ARRAY_HDF5)
     target_sources(test-${PROJECT_NAME}-ArrayHandler.exe PRIVATE testArrayHandlerFactory.cpp)
 endif ()
