implemented ArrayHandlerDistrSparse for hanlding distributed and a sparse array

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -12,6 +12,9 @@ LibraryManager_Append(${PROJECT_NAME}
         PUBLIC_HEADER HDF5Handle.h ArrayHandler.h ArrayHandlerIterable.h ArrayHandlerSparse.h
         ArrayHandlerIterableSparse.h ArrayHandlerFactory.h Span.h
         )
+if (MPI)
+    LibraryManager_Append(${PROJECT_NAME} PUBLIC_HEADER ArrayHandlerDistr.h ArrayHandlerDistrSparse.h)
+endif ()
 target_link_libraries(${PROJECT_NAME} PUBLIC ${HDF5_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${HDF5_INCLUDE_DIRS})
 target_compile_definitions(${PROJECT_NAME} PUBLIC ${HDF5_DEFINITIONS})
@@ -24,7 +27,7 @@ endif ()
 if (MPI)
     LibraryManager_Append(${PROJECT_NAME}
             SOURCES DistrArray.cpp util.cpp PHDF5Handle.cpp
-            PUBLIC_HEADER DistrArray.h util.h PHDF5Handle.h ArrayHandlerDistr.h
+            PUBLIC_HEADER DistrArray.h util.h PHDF5Handle.h
             )
 
     if (LINEARALGEBRA_ARRAY_MPI3)
