Implemented Distribution class to store information on how array is partitioned into chunks

--- a/src/molpro/linalg/array/util/CMakeLists.txt
+++ b/src/molpro/linalg/array/util/CMakeLists.txt
@@ -1,3 +1,7 @@
+LibraryManager_Append(${PROJECT_NAME}
+        PUBLIC_HEADER Distribution.h)
 if (MPI)
-    LibraryManager_Append(${PROJECT_NAME} SOURCES DistrFlags.cpp PUBLIC_HEADER DistrFlags.h)
+    LibraryManager_Append(${PROJECT_NAME}
+            SOURCES DistrFlags.cpp
+            PUBLIC_HEADER DistrFlags.h)
 endif ()
