Extend benchmark to distributed arrays

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -12,3 +12,4 @@ foreach (t PagedVector-benchmark benchmark)
         add_test(${t} ${t}.exe)
     endif ()
 endforeach ()
+target_compile_features(benchmark.exe PUBLIC cxx_std_17)
