--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -45,9 +45,8 @@ if (MPI)
         target_compile_definitions(test-${PROJECT_NAME}-parallel PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
     endif ()
     target_link_libraries(test-${PROJECT_NAME}-parallel PUBLIC molpro::${PROJECT_NAME} gmock_main)
-    gtest_discover_tests(test-${PROJECT_NAME}-parallel)
 
-    add_test(NAME test-${PROJECT_NAME}-parallel
+    add_test(NAME test-${PROJECT_NAME}-parallel-run-mpi
             COMMAND ${MPIEXEC_EXECUTABLE} ${MPIOPTIONS} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS}
             ${CMAKE_CURRENT_BINARY_DIR}/test-${PROJECT_NAME}-parallel ${MPIEXEC_POSTFLAGS}
             WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
