--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -19,7 +19,7 @@ add_executable(test-${PROJECT_NAME}-ArrayHandler.exe testArrayHandler.cpp testAr
 target_link_libraries(test-${PROJECT_NAME}-ArrayHandler.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
 gtest_discover_tests(test-${PROJECT_NAME}-ArrayHandler.exe)
 
-add_executable(test-${PROJECT_NAME}-array-util.exe testDistribution.cpp)
+add_executable(test-${PROJECT_NAME}-array-util.exe testDistribution.cpp testUtil.cpp)
 target_link_libraries(test-${PROJECT_NAME}-array-util.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
 gtest_discover_tests(test-${PROJECT_NAME}-array-util.exe)
 
