build with mpi only

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,8 +1,8 @@
-foreach (t PagedVector-benchmark benchmark LinearEigensystemBenchmark-mpi)
+foreach (t PagedVector-benchmark benchmark)
     add_executable(${t}.exe ${t}.cpp)
     target_link_libraries(${t}.exe PUBLIC ${PROJECT_NAME} Profiler)
     if (MPI)
-#        target_link_libraries(${t}.exe PUBLIC MPI::MPI_CXX)
+        #        target_link_libraries(${t}.exe PUBLIC MPI::MPI_CXX)
         # in principle this should be configured at runtime but it seems cmake/ctest support is not yet there to do it simply
         if (NOT DEFINED ENV{MPIPROCS})
             set(ENV{MPIPROCS} 1)
@@ -13,3 +13,15 @@ foreach (t PagedVector-benchmark benchmark LinearEigensystemBenchmark-mpi)
         add_test(${t} ${t}.exe)
     endif ()
 endforeach ()
+
+if (MPI)
+    foreach (t LinearEigensystemBenchmark-mpi)
+        add_executable(${t}.exe ${t}.cpp)
+        target_link_libraries(${t}.exe PUBLIC ${PROJECT_NAME} Profiler)
+        if (NOT DEFINED ENV{MPIPROCS})
+            set(ENV{MPIPROCS} 1)
+        endif ()
+        message(DEBUG "add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} ${CMAKE_CURRENT_BINARY_DIR}/${t}.exe ${MPIEXEC_POSTFLAGS})")
+        add_test(${t} ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} $ENV{MPIPROCS} ${MPIEXEC_PREFLAGS} "${CMAKE_CURRENT_BINARY_DIR}/${t}.exe" ${MPIEXEC_POSTFLAGS})
+    endforeach ()
+endif ()
