--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,16 @@ cache:
   paths:
     - public
 build100:
+  tags:
+    - linux-farm
   only:
     - merge_requests
   timeout: 60m
   script:
     - BUILD=build/FORTRAN=1/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=1 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j  && (time ctest || ctest -V)
 build110:
+  tags:
+    - linux-farm
 #  only:
 #    - merge_requests
   timeout: 60m
@@ -17,12 +21,16 @@ build110:
     - export MPIPROCS=2
     - BUILD=build/FORTRAN=1/MPI=1/PPIDD=1 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=1 -DMPI=1 -DPPIDD=1 $OLDPWD && time cmake --build . -- -j && (time ctest || ctest -V)
 build000:
+  tags:
+    - linux-farm
 #  only:
 #    - merge_requests
   timeout: 60m
   script:
     - BUILD=build/FORTRAN=0/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=0 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j && (time ctest || ctest -V)
 build010:
+  tags:
+    - linux-farm
   only:
     - merge_requests
   timeout: 60m
@@ -30,6 +38,8 @@ build010:
     - export MPIPROCS=2
     - BUILD=build/FORTRAN=0/MPI=1/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=0 -DMPI=1 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j && (time ctest || ctest -V)
 build011:
+  tags:
+    - linux-farm
   only:
     - merge_requests
   timeout: 60m
@@ -37,6 +47,8 @@ build011:
     - export MPIPROCS=2
     - BUILD=build/FORTRAN=1/MPI=1/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DFORTRAN=0 -DMPI=1 -DPPIDD=1 $OLDPWD && time cmake --build . -j && (time ctest || ctest -V)
 clang011:
+  tags:
+    - linux-farm
 #  only:
 #    - merge_requests
   timeout: 60m
