implemented temp_hdf5_handle

--- a/src/molpro/linalg/array/util/CMakeLists.txt
+++ b/src/molpro/linalg/array/util/CMakeLists.txt
@@ -1,5 +1,5 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES temp_file.cpp
+        SOURCES temp_file.cpp temp_hdf5_handle.cpp
         PUBLIC_HEADER Distribution.h select_max_dot.h temp_file.h temp_hdf5_handle.h TempHandle.h)
 if (MPI)
     LibraryManager_Append(${PROJECT_NAME}
