Added a free-standing function gather_all in array/util that performs MPI_Allgatherv() for a distributed container. Used it in the C-wrapper

--- a/src/molpro/linalg/array/util/CMakeLists.txt
+++ b/src/molpro/linalg/array/util/CMakeLists.txt
@@ -3,5 +3,5 @@ LibraryManager_Append(${PROJECT_NAME}
 if (MPI)
     LibraryManager_Append(${PROJECT_NAME}
             SOURCES DistrFlags.cpp
-            PUBLIC_HEADER DistrFlags.h)
+            PUBLIC_HEADER DistrFlags.h gather_all.h)
 endif ()
