Fix lots with linear equations

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,7 +14,7 @@ endif ()
 set(EXAMPLES DIISexample.cpp
         OptimizeExample.cpp
         LinearEigensystemExample.cpp LinearEigensystemExample-serial.cpp LinearEigensystemExample-Pspace-fixed-serial.cpp
-        LinearEquationsExample.cpp
+        LinearEquationsExample.cpp LinearEquationsExample-Pspace.cpp
         ${ITERATIVESOLVER_FORTRAN_EXAMPLES}
         )
 if (LINEARALGEBRA_ARRAY_MPI3 AND MPI)
