move documentation settings to doc subdirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,4 @@ if (${CMAKE_PROJECT_NAME} STREQUAL ${PROJECT_NAME})
     add_subdirectory(test)
 endif ()
 
-# Documentation has to come last to make sure all dependencies have been added
-include(DependencyManagerDocs)
-DependencyManagerDocs_Add(${PROJECT_NAME}
-        FILES README.md
-        DOC_URL "https://molpro.gitlab.io/IterativeSolver/${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}"
-        DEPENDS Profiler # projects whose documentation has to be built before current project.
-        )
+add_subdirectory(doc)
