rename directory detail to subspace

--- a/src/molpro/linalg/itsolv/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/CMakeLists.txt
@@ -1,4 +1,4 @@
 LibraryManager_Append(${PROJECT_NAME}
         PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystemA.h
         )
-add_subdirectory(detail)
+add_subdirectory(subspace)
