Fix bad representation of macOS frameworks from ga-config

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -27,6 +27,11 @@ if (NOT PPIDD AND (MPI AND LINEARALGEBRA_ARRAY_GA))
                 string(STRIP "${ga-${f}}" ga-${f})
                 separate_arguments(ga-${f} NATIVE_COMMAND "${ga-${f}}")
             endforeach ()
+            string(FIND "${ga-libs}" "-framework;Accelerate" ga-accelerate)
+            if (NOT ga_accelerate EQUAL -1)
+                string(REPLACE ";-framework;Accelerate" "" ga-libs "${ga-libs}")
+                string(APPEND ga-ldflags ";-framework;Accelerate")
+            endif ()
             add_library(ga::ga INTERFACE IMPORTED GLOBAL)
             target_link_libraries(ga::ga INTERFACE "${ga-libs};${ga-network_libs}")
             target_link_options(ga::ga INTERFACE "${ga-ldflags};${ga-network_ldflags}")
