--- a/src/molpro/linalg/itsolv/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/CMakeLists.txt
@@ -1,4 +1,6 @@
 LibraryManager_Append(${PROJECT_NAME}
+        SOURCES Logger.cpp
         PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystemA.h
+        Logger.h
         )
 add_subdirectory(subspace)
