--- a/src/molpro/linalg/itsolv/subspace/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/subspace/CMakeLists.txt
@@ -1,4 +1,4 @@
 LibraryManager_Append(${PROJECT_NAME}
         SOURCES QSpace.cpp
-        PUBLIC_HEADER PSpace.h QSpace.h RSpace.h XSpace.h Matrix.h SubspaceData.h
+        PUBLIC_HEADER PSpace.h QSpace.h RSpace.h SSpace.h XSpace.h Matrix.h SubspaceData.h
         )
