removed RSpace; it is redundant now

--- a/test/itsolv/subspace/CMakeLists.txt
+++ b/test/itsolv/subspace/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(test-${PROJECT_NAME}-itsolv.exe PRIVATE testMatrix.cpp test_util.cpp testRSpace.cpp)
+target_sources(test-${PROJECT_NAME}-itsolv.exe PRIVATE testMatrix.cpp test_util.cpp)
