remove build_subspace.h; also redundant

--- a/src/molpro/linalg/itsolv/subspace/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/subspace/CMakeLists.txt
@@ -1,4 +1,4 @@
 LibraryManager_Append(${PROJECT_NAME}
         PUBLIC_HEADER PSpace.h QSpace.h CSpace.h XSpaceI.h Matrix.h SubspaceData.h
-        gram_schmidt.h util.h XSpace.h build_subspace.h check_conditioning.h Dimensions.h
+        gram_schmidt.h util.h XSpace.h check_conditioning.h Dimensions.h
         )
