--- a/test/itsolv/CMakeLists.txt
+++ b/test/itsolv/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(test-${PROJECT_NAME}-itsolv.exe test_wrap.cpp)
+add_executable(test-${PROJECT_NAME}-itsolv.exe test_wrap.cpp test_reset_dspace.cpp)
 target_link_libraries(test-${PROJECT_NAME}-itsolv.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
 gtest_discover_tests(test-${PROJECT_NAME}-itsolv.exe)
 
