implemented DSpaceResetter. Simpler algorithm for resetting D space by moving solutions into the working set

--- a/test/itsolv/subspace/CMakeLists.txt
+++ b/test/itsolv/subspace/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(test-${PROJECT_NAME}-itsolv.exe PRIVATE testMatrix.cpp test_util.cpp)
+target_sources(test-${PROJECT_NAME}-itsolv.exe PRIVATE testMatrix.cpp test_util.cpp test_DSpaceResetter.cpp)
